force-app/main/default/objects/blng__InvoiceLine__c/blng__InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>The line items on Invoices, such as products etc.</description>
    <label>Invoice Line</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>