force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__ARStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__ARStatus__c</fullName>
    <label>AR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceARStatus</valueSetName>
    </valueSet>
</CustomField>