force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Asset__c.field-meta.xml
<CustomField>
    <fullName>blng__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The item related to the invoice line.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>AssetInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>