force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Balance__c.field-meta.xml
<CustomField>
    <fullName>blng__Balance__c</fullName>
    <formula>blng__TotalAmount__c - blng__Payments__c - blng__Credits__c + blng__Debits__c + blng__NegativeLineConversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount (with tax) - Payments - Credits + Debits + Negative Line Conversion</inlineHelpText>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>