force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__BalancewithoutDebits__c.field-meta.xml
<CustomField>
    <fullName>blng__BalancewithoutDebits__c</fullName>
    <formula>blng__TotalAmount__c - blng__PaymentsAgainstInvoiceLines__c + blng__RefundsAgainstInvoiceLines__c - blng__Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance without Debits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>