force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__BillingGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Invoice Lines (Billing GL Rule)</relationshipLabel>
    <relationshipName>BillingGLRuleInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>