force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__BillingRule__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Rule</label>
    <referenceTo>blng__BillingRule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>BillingRuleInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>