force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__BillingTransaction__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Transaction</label>
    <referenceTo>blng__BillingTransaction__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLinesBillingTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>