force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__CalculatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>blng__CalculatedQuantity__c</fullName>
    <description>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</description>
    <inlineHelpText>This indicates the actual number of times the charge is being applied for the line. If you bill a monthly invoice for 45 days this value will be 1.5</inlineHelpText>
    <label>Calculated Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>