force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__ChargeType__c.field-meta.xml
<CustomField>
    <fullName>blng__ChargeType__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__ChargeType</valueSetName>
    </valueSet>
</CustomField>