force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__ConvertedCreditNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__ConvertedCreditNoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Credit Note Line</label>
    <referenceTo>blng__CreditNoteLine__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>