force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Credits__c.field-meta.xml
<CustomField>
    <fullName>blng__Credits__c</fullName>
    <inlineHelpText>Net of allocations and canceled allocations for credit notes</inlineHelpText>
    <label>Credits</label>
    <summarizedField>blng__CreditNoteAllocation__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__CreditNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>blng__CreditNoteAllocation__c.blng__Unallocated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__CreditNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>