force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__DaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>blng__DaysPastDue__c</fullName>
    <description>The number of days since the invoice line’s due date.</description>
    <formula>blng__Invoice__r.blng__DaysOutstanding__c</formula>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>