force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__DebitPayments__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitPayments__c</fullName>
    <formula>blng__PaymentsAgainstDebitNoteLines__c - blng__RefundsAgainstDebitNoteLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>