force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__DebitsPaymentAllocations__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitsPaymentAllocations__c</fullName>
    <label>Debits (Payment Allocations)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>