force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__DebitsPaymentUnallocations__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitsPaymentUnallocations__c</fullName>
    <label>Debits (Payment Unallocations)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>