force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__DueDate__c.field-meta.xml
<CustomField>
    <fullName>blng__DueDate__c</fullName>
    <description>The date by which invoice payments are expected to be received.</description>
    <formula>blng__Invoice__r.blng__DueDate__c</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>