force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__EndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__EndDate__c</fullName>
    <description>The ending date for the period of calculation of this charge. Applicable only to Recurring Charges.</description>
    <inlineHelpText>The last day of the billing period.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>