force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Invoice__c.field-meta.xml
<CustomField>
    <fullName>blng__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceInvoiceLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>