force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__InvoiceLineState__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLineState__c</fullName>
    <label>Invoice Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceState</valueSetName>
    </valueSet>
</CustomField>