force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__InvoiceLineStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLineStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceStatus</valueSetName>
    </valueSet>
</CustomField>