force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__InvoiceRun__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Run</label>
    <referenceTo>blng__InvoiceRun__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceRunInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>