force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__NetAllocationsAgainstInvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>blng__NetAllocationsAgainstInvoiceLines__c</fullName>
    <formula>blng__PaymentsAgainstInvoiceLines__c  +  blng__RefundsAgainstInvoiceLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Allocations Against Invoice Lines</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>