force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__OverrideInitialRevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__OverrideInitialRevenueStartDate__c</fullName>
    <label>Override Initial Revenue Start Date</label>
    <type>Date</type>
</CustomField>