force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Payments__c.field-meta.xml
<CustomField>
    <fullName>blng__Payments__c</fullName>
    <formula>blng__PaymentsAgainstDebitNoteLines__c + blng__PaymentsAgainstInvoiceLines__c -  blng__RefundsAgainstDebitNoteLines__c - blng__RefundsAgainstInvoiceLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net payments. All Payments less refunds.</inlineHelpText>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>