force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__PaymentsAgainstDebitNoteLines__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentsAgainstDebitNoteLines__c</fullName>
    <label>Allocations Against Debit Note Lines</label>
    <summarizedField>blng__DebitNoteAllocation__c.blng__Payments__c</summarizedField>
    <summaryFilterItems>
        <field>blng__DebitNoteAllocation__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__DebitNoteAllocation__c.blng__InvoiceLine__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>