force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__Product__c.field-meta.xml
<CustomField>
    <fullName>blng__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>InvoiceLinesProduct</relationshipName>
    <type>Lookup</type>
</CustomField>