force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxCity__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCity__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination city for this product.</inlineHelpText>
    <label>Tax City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>