force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxCounty__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxCounty__c</fullName>
    <label>Tax County (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>