force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxError__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxError__c</fullName>
    <formula>IF(ISPICKVAL(blng__TaxStatus__c,&quot;Error&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Error</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>