force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxGLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxGLRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax GL Rule</label>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>TaxGLRuleInvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>