force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxLocationCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxLocationCode__c</fullName>
    <label>Tax Location Code (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>