force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxState__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxState__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination State for this product.</inlineHelpText>
    <label>Tax State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>