force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxStreet__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxStreet__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination Street Address for this product.</inlineHelpText>
    <label>Tax Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>