force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TaxZipCode__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxZipCode__c</fullName>
    <inlineHelpText>For use in tax calculations. Destination ZIP Code/Postal Code for this product.</inlineHelpText>
    <label>Tax Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>