force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalAmount__c</fullName>
    <inlineHelpText>SubTotal + Tax</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>