force-app/main/default/objects/blng__InvoiceLine__c/fields/blng__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>blng__UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>225</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>