force-app/main/default/objects/blng__InvoiceLine__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>